--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
 		<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.css" />
-		<link rel="stylesheet" type="text/css" href="css/jquery.mobile.squareui.css" />
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
@@ -45,7 +44,7 @@
     <script src="js/utils.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            app.tpl.loadTemplates(['event-list-item', 'main-layout', 'first-event-list-p', 'menu', 'login-p', 'question-item', 'registration', 'partner-list-p'],
+            app.tpl.loadTemplates(['event-list-item', 'main-layout', 'page-event-list', 'menu', 'page-login', 'question-item', 'registration', 'page-partner-list'],
                     function () {
                         console.log('LOAD');
                         app.initialize();
