--- a/www/tpl/event-list-item.html
+++ b/www/tpl/event-list-item.html
@@ -1,13 +1,13 @@
 <a href="#events/<%= id %>">
     <div class="ui-grid-a">
         <div class="ui-block-a">
-            <div style="height:60px">
+            <div>
                 <h2><%= eventName %></h2>
                 <p><%= location %></p>
             </div>
         </div>
         <div class="ui-block-b">
-            <div style="height:60px">
+            <div>
                 <h2><%= startDate %></h2>
                 <p><%= endDate %></p>
             </div>
