--- a/www/tpl/menu.html
+++ b/www/tpl/menu.html
@@ -1,9 +1,8 @@
-
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#login">Login</a></li>
-        <li><a href="#qa">QA</a></li>
-        <li><a href="#">Item 4</a></li>
-        <li><a href="#">Item 5</a></li>
-        <li><a href="#">Item 6</a></li>
-    </ul>
+<ul id="main-menu">
+	<li><a href="#home">Home</a></li>
+	<li><a href="#login">Login</a></li>
+	<li><a href="#qa">QA</a></li>
+	<li><a href="#">Item 4</a></li>
+	<li><a href="#">Item 5</a></li>
+	<li><a href="#">Item 6</a></li>
+</ul>
