--- a/www/tpl/page-event-list.html
+++ b/www/tpl/page-event-list.html
@@ -1,13 +1,9 @@
-<div data-role="collapsible" data-theme="c" data-inset="false">
-    <h3>Previous events</h3>
-    <div style="margin:0; padding: 0;" class="lists">
-
-    </div>
+<div data-role="collapsible" data-inset="false" id="previous-events">
+	<h3>Previous events</h3>
+	<div class="lists"></div>
 </div><!-- /collapsible -->
 
-<div data-role="collapsible" data-theme="a" data-inset="false" data-collapsed="false">
-    <h3>Upcoming events</h3>
-    <div style="margin:0; padding: 0;" class="lists">
-
-    </div>
+<div data-role="collapsible" data-inset="false" id="upcoming-events">
+	<h3>Upcoming events</h3>
+	<div class="lists"></div>
 </div>
