--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -2,13 +2,13 @@
 	Login
 </div>
 
-<form id="login-form" class="with-padding bg-green-20">
+<form id="login-form" class="with-padding bg-green-20 minus-side-margin">
 	<input type="text" id="email" name="text-basic" placeholder="Email"  value="">
 
 	<input type="password" id="password" name="text-basic" placeholder="Password"  value="">
 </form>
 
-<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-big" onClick="login();">Submit</a>
+<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-big minus-side-margin" onClick="login();">Submit</a>
 
 <a id="message" href="#popupBasic" data-rel="popup" style="visibility: hidden;" class="ui-shadow ui-btn" data-transition="pop">Basic Popup</a>
 <div data-role="popup" id="popupBasic">
