--- a/www/tpl/menu.html
+++ b/www/tpl/menu.html
@@ -1,5 +1,5 @@
-<ul id="main-menu">
-	<li><a href="#home">Home</a></li>
+<ul>
+	<li><a href="#events">Home</a></li>
 	<li><a href="#login">Login</a></li>
 	<li><a href="#qa">QA</a></li>
 	<li><a href="#">Item 4</a></li>
