--- a/www/index.html
+++ b/www/index.html
@@ -17,65 +17,61 @@
         <script src="js/lib/jquery-1.11.0.js"></script>
 
         <title>Congresso</title>
+
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript">
+            $.ajaxPrefilter( function( options, originalOptions, jqXHR ) {
+                options.xhrFields = {
+                    withCredentials: true
+                };
+            });
+        </script>
+
+        <!-- Libs -->
+        <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
+        <script type="text/javascript" src="js/lib/underscore.js"></script>
+        <script type="text/javascript" src="js/lib/backbone.js"></script>
+        <!-- Libs -->
+
+        <!-- Components -->
+        <script type="text/javascript" src="js/components/view.js"></script>
+        <!-- Components -->
+
+        <!-- Models -->
+        <script type="text/javascript" src="js/models/event.js"></script>
+        <script type="text/javascript" src="js/models/user.js"></script>
+        <script type="text/javascript" src="js/models/partner.js"></script>
+        <!-- Models -->
+
+        <script src="js/utils.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                window.App.run();
+            });
+        </script>
+
+        <!-- Collections -->
+        <script type="text/javascript" src="js/collections/events.js"></script>
+        <script type="text/javascript" src="js/collections/partners.js"></script>
+        <!-- Collections -->
+
+        <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
+
+        <!-- Views -->
+        <script type="text/javascript" src="js/views/event.js"></script>
+        <script type="text/javascript" src="js/views/events.js"></script>
+        <script type="text/javascript" src="js/views/layout.js"></script>
+        <script type="text/javascript" src="js/views/home.js"></script>
+        <script type="text/javascript" src="js/views/menu.js"></script>
+        <script type="text/javascript" src="js/views/login.js"></script>
+        <script type="text/javascript" src="js/views/qa.js"></script>
+        <script type="text/javascript" src="js/views/partnersList.js"></script>
+        <script type="text/javascript" src="js/views/partnersPage.js"></script>
+        <!-- Views -->
+
+        <script type="text/javascript" src="js/router.js"></script>
     </head>
     <body>
-
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">
-        $.ajaxPrefilter( function( options, originalOptions, jqXHR ) {
-            options.xhrFields = {
-                withCredentials: true
-            };
-        });
-    </script>
-
-    <!-- Libs -->
-    <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
-    <script type="text/javascript" src="js/lib/underscore.js"></script>
-    <script type="text/javascript" src="js/lib/backbone.js"></script>
-    <!-- Libs -->
-
-    <!-- Models -->
-    <script type="text/javascript" src="js/models/event.js"></script>
-    <script type="text/javascript" src="js/models/user.js"></script>
-    <script type="text/javascript" src="js/models/partner.js"></script>
-    <!-- Models -->
-
-    <script src="js/utils.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            app.tpl.loadTemplates(['event-list-item', 'main-layout', 'first-event-list-p', 'menu', 'login-p', 'question-item', 'registration', 'partner-list-p'],
-                    function () {
-                        console.log('LOAD');
-                        app.initialize();
-                    });
-        });
-    </script>
-
-    <!-- Collections -->
-    <script type="text/javascript" src="js/collections/events.js"></script>
-    <script type="text/javascript" src="js/collections/partners.js"></script>
-    <!-- Collections -->
-
-    <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
-
-    <script type="text/javascript">
-        app.initialize();
-    </script>
-
-    <!-- Views -->
-    <script type="text/javascript" src="js/views/event.js"></script>
-    <script type="text/javascript" src="js/views/events.js"></script>
-    <script type="text/javascript" src="js/views/layout.js"></script>
-    <script type="text/javascript" src="js/views/home.js"></script>
-    <script type="text/javascript" src="js/views/menu.js"></script>
-    <script type="text/javascript" src="js/views/login.js"></script>
-    <script type="text/javascript" src="js/views/qa.js"></script>
-    <script type="text/javascript" src="js/views/registration.js"></script>
-    <script type="text/javascript" src="js/views/partners.js"></script>
-    <!-- Views -->
-
-    <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
